--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ name = "arm-koe1"
 version = "0.1.0"
 
 [features]
-default = ["blue_pill"]
+default = ["nucleo_f411"]
 blue_pill = ["stm32f1"]
 nucleo_f411 = ["stm32f4"]
 
