--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -33,10 +33,10 @@ rustflags = [
 # target = "thumbv6m-none-eabi"        # Cortex-M0 and Cortex-M0+
 
 # Blue pill with stm32f103
-target = "thumbv7m-none-eabi" # Cortex-M3
+# target = "thumbv7m-none-eabi" # Cortex-M3
 
 # nucleo F411
-# target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)
+target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)
 
 # target = "thumbv7em-none-eabi"       # Cortex-M4 and Cortex-M7 (no FPU)
 # target = "thumbv8m.base-none-eabi"   # Cortex-M23
